# mailbox-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: context.rs  db.rs  lib.rs  main.rs  messages.rs  tools.rs
